--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Modern PWA React Application" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
     <link rel="manifest" href="./manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
     <title>Onlygood</title>
